@@ -6,13 +6,13 @@
 #define __C_SCENE_NODE_ANIMATOR_TEXTURE_H_INCLUDED__
 
 #include "irrArray.h"
-#include "ISceneNode.h"
+#include "ISceneNodeAnimatorFinishing.h"
 
 namespace irr
 {
 namespace scene
 {
-	class CSceneNodeAnimatorTexture : public ISceneNodeAnimator
+	class CSceneNodeAnimatorTexture : public ISceneNodeAnimatorFinishing
 	{
 	public:
 
@@ -48,7 +48,6 @@ namespace scene
 		core::array<video::ITexture*> Textures;
 		u32 TimePerFrame;
 		u32 StartTime;
-		u32 EndTime;
 		bool Loop;
 	};
 
