@@ -49,6 +49,7 @@
 		<Unit filename="md2Animation.cpp" />
 		<Unit filename="planeMatrix.cpp" />
 		<Unit filename="sceneCollisionManager.cpp" />
+		<Unit filename="sceneNodeAnimator.cpp" />
 		<Unit filename="softwareDevice.cpp" />
 		<Unit filename="testUtils.cpp" />
 		<Unit filename="testVector2d.cpp" />
